<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Final Project</string>
    <string name="joypal">JoyPal</string>
    <string name="character_c">Character Creator</string>
    <string name="button">Get Start</string>
    <string name="button_login">Login</string>
    <string name="button_clear">Clear All Roles</string>

    <string name="button_design">Design Joypal</string>
    <string name="button_next">Next</string>
    <string name="create_describe">Let\'s set JoyPal\'s personality!</string>
    <string name="create_describe2">Don\'t want to set personality?</string>
    <string name="button_skip">skip</string>
    <string name="joypal_gene">JoyPal Generating...</string>
    <string name="load">0%</string>
    <string name="back_to_log">Back to Login</string>
    <string name="upload_reference_image"><u>Upload a reference image (optional)</u></string>
    <string name="upload_reference_image_underlined"><u>Upload a reference image</u></string>
    <string name="delete_reference_image">Delete reference image</string>
    <string name="change_picture"><u>Change picture</u></string>
</resources>